--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Get notified the moment new items arrive at your favorite consignment shops. Sign up for ShopSnapNetwork alerts." />
 
   <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 
   <!-- Fonts: Playfair Display (editorial heading) + DM Sans (clean body) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -800,10 +800,16 @@
   // ============================================
   // CONFIGURATION — set before deploying
   // ============================================
-  const SUPABASE_URL  = 'https://frfdumwlhrlsuxnznxrc.supabase.co';
-  const SUPABASE_ANON = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZyZmR1bXdsaHJsc3V4bnpueHJjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAwNTE0NTMsImV4cCI6MjA4NTYyNzQ1M30.0PhODSjEh7Kk10tSelfJ8QhTBs2YbUrfLmC9RIxw0PY';
+  const SUPABASE_URL  = 'YOUR_SUPABASE_URL';
+  const SUPABASE_ANON = 'YOUR_SUPABASE_ANON_KEY';
 
   const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON);
+
+  // ============================================
+  // STATE — declare before any function uses them
+  // ============================================
+  let storeData  = [];
+  let prefCount  = 0;
 
   // ============================================
   // CATEGORY & SIZE OPTIONS
@@ -849,7 +855,6 @@
   // ============================================
   // LOAD STORES FROM SUPABASE
   // ============================================
-  let storeData = [];
 
   async function loadStores() {
     const { data, error } = await sb
@@ -883,8 +888,6 @@
   // ============================================
   // PREFERENCE ROWS
   // ============================================
-  let prefCount = 0;
-
   function buildSelect(name, options, id) {
     return `<select id="${id}" name="${name}">
       ${options.map(o => `<option value="${o === options[0] ? '' : o}">${o}</option>`).join('')}
