Pare back category vocabulary for MVP/Beta

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <p class="section-label">For Store Owners</p>
         <h2 class="section-heading">Turn new inventory into immediate sales.</h2>
         <p>ShopSnap connects your consignment shop to a network of motivated buyers who are already looking for what you have. AI-powered intake, automatic subscriber alerts, and Square POS integration — built for the way consignment shops actually work.</p>
-        <a href="mailto:john.mahoney@shopsnapnetwork.com" class="owners-cta">Get in touch →</a>
+        <a href="/cdn-cgi/l/email-protection#b8d2d7d0d696d5d9d0d7d6ddc1f8cbd0d7c8cbd6d9c8d6ddcccfd7cad396dbd7d5" class="owners-cta">Get in touch →</a>
       </div>
       <div class="owners-badge">
         <div class="big-text">AI</div>
@@ -224,13 +224,13 @@
 
   <footer>
     <span class="wordmark">ShopSnapNetwork</span>
-    <p>Bellingham, WA · <a href="mailto:john.mahoney@shopsnapnetwork.com" style="color:var(--color-muted);">Contact Us</a></p>
+    <p>Bellingham, WA · <a href="/cdn-cgi/l/email-protection#80eaefe8eeaeede1e8efeee5f9c0f3e8eff0f3eee1f0eee5f4f7eff2ebaee3efed" style="color:var(--color-muted);">Contact Us</a></p>
     <p>© 2026 JJMC LLC dba ShopSnap</p>
   </footer>
 
 </div>
 
-<script type="module">
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="module">
   import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
 
   // ============================================
@@ -246,12 +246,12 @@
   // ============================================
   const CATEGORIES = [
     '— Any category —',
-    'Shirt','Blouse','T-Shirt','Sweater','Sweatshirt','Tank Top','Cardigan',
-    'Jeans','Pants','Shorts','Skirt','Leggings',
-    'Dress','Jumpsuit','Romper','Suit','Blazer',
+    'Shirt','Blouse','Sweater','Sweatshirt','Hoodie','Tank Top','Crop Top',
+    'Jeans','Pants','Shorts','Skirt',
+    'Dress','Suit','Blazer',
     'Jacket','Coat','Vest',
-    'Sneakers','Boots','Heels','Sandals','Loafers','Flats',
-    'Belt','Bag','Hat','Scarf','Jewelry','Sunglasses','Other'
+    'Accessories','Hat','Tie',
+    'Other'
   ];
   const DEPARTMENTS = ["— Any dept —", "Women's", "Men's", "Kids'", "Unisex"];
   const SIZES = [
@@ -422,11 +422,3 @@
   // ============================================
   // UTILITY
   // ============================================
-  function showMsg(el, type, text) {
-    el.className = `msg ${type}`; el.textContent = text; el.style.display = 'block';
-    el.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
-  }
-</script>
-
-</body>
-</html>
