--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 </div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="module">
+<script type="module">
   import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
 
   // ============================================
