--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
 
 </div>
 
-<script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const { createClient } = supabase;
 
   // ============================================
   // CONFIGURATION — fill in before deploying
