--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
 
 <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 <script>
+  console.log("script started");
+  console.log("supabase object:", typeof supabase);
   const { createClient } = supabase;
 
   // ============================================
